# vexide-eclipselib

./: Cargo.toml  README.md
src/: eclipselib.rs  main.rs  robot.rs
src/eclipselib/: drive.rs  motor.rs  motors.rs  odometry.rs  pid.rs  pneumatics.rs  spline.rs
src/eclipselib/swerve/: mod.rs  swervedrive.rs  swervemod.rs  swervemotors.rs
